Zmiana nazwy Dashboard na AllVerbs, w Favourite usuwa z listy po kliknięciu na pozycję

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,9 +7,9 @@
         android:title="@string/title_practice" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_all_verbs"
+        android:icon="@drawable/ic_view_headline_black_24dp"
+        android:title="@string/title_all_verbs" />
 
     <item
         android:id="@+id/navigation_favorite"
