--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -11,42 +11,6 @@
         android:layout_height="match_parent"
         android:background="@android:color/darker_gray"
         android:padding="4dp"
-        android:scrollbars="vertical"
-        android:layout_marginBottom="100dp"/>
-
-    <EditText
-        android:id="@+id/edittext_insert"
-        android:layout_width="40dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginBottom="25dp"
-        android:inputType="number"/>
-
-    <Button
-        android:id="@+id/button_insert"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/edittext_insert"
-        android:layout_toEndOf="@id/edittext_insert"
-        android:text="insert" />
-
-    <EditText
-        android:id="@+id/edittext_remove"
-        android:layout_width="40dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/button_insert"
-        android:layout_marginStart="65dp"
-        android:layout_toEndOf="@id/button_insert"
-        android:inputType="number" />
-
-    <Button
-        android:id="@+id/button_remove"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/edittext_remove"
-        android:layout_toEndOf="@id/edittext_remove"
-        android:text="remove" />
+        android:scrollbars="vertical"/>
 
 </RelativeLayout>
